--- a/changelog
+++ b/changelog
@@ -5,6 +5,13 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Released]
+## [2.1.0] - 07-10-2023
+### Fixed
+- Events with WS when room is shared
+
+### Changed
+- Use axios
+
 ## [2.0.1] - 17-06-2023
 ### Added
 - use default cookie for set auth with encryption
